syntax = "proto3";

package database;

option go_package = "github.com/yhonda-ohishi/dtako_events/proto;dtako";

service DatabaseService {
  rpc QueryDatabase(QueryRequest) returns (QueryResponse);
  rpc StreamQuery(StreamQueryRequest) returns (stream QueryRow);
  rpc GetTables(GetTablesRequest) returns (GetTablesResponse);
  rpc ExecuteSQL(ExecuteRequest) returns (ExecuteResponse);
}

message QueryRequest {
  string sql = 1;
  repeated string params = 2;
}

message QueryResponse {
  repeated DatabaseRow rows = 1;
  int32 count = 2;
}

message DatabaseRow {
  map<string, string> columns = 1;
}

message StreamQueryRequest {
  string sql = 1;
}

message QueryRow {
  map<string, string> columns = 1;
}

message GetTablesRequest {}

message GetTablesResponse {
  repeated string tables = 1;
}

message ExecuteRequest {
  string sql = 1;
  repeated string params = 2;
}

message ExecuteResponse {
  int32 affected_rows = 1;
}
